deployment/deployment-be.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scientific-conference-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scientific-conference-backend
  template:
    metadata:
      labels:
        app: scientific-conference-backend
    spec:
      containers:
      - name: scientific-conference-backend
        image: "ghcr.io/stepanse/scientific-conference-backend:main"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /project/db/
          name: dbvol
        ports:
        - containerPort: 8000
      volumes:
      - name: dbvol
        persistentVolumeClaim:
          claimName: scientific-conference-be-db-pvc
