deployment/ingress-fe.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scientific-congress-frontend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: "scientific-conference.tutik"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scientific-conference-frontend-svc
            port:
              number: 80
